fix show old posts, and word-break in description

--- a/src/styles/components/_channelCard.scss
+++ b/src/styles/components/_channelCard.scss
@@ -61,7 +61,8 @@
   line-height: 1.5;
   text-align: center;
   color: #959595;
-  margin-bottom: 22px
+  margin-bottom: 22px;
+  word-break: break-word;
 }
 
 .channelCard_button {
